--- a/.env.travis
+++ b/.env.travis
@@ -6,9 +6,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=travis
+DB_USERNAME=travis
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
